--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "chroma-js": "^2.1.0",
+    "rc-slider": "^9.6.1",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
