--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chroma-js": "^2.1.0",
     "rc-slider": "^9.6.1",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/chroma-js": "^2.1.0",
     "@types/material-ui": "^0.21.8",
+    "@types/react-color": "^3.0.4",
     "@types/react-copy-to-clipboard": "^4.3.0"
   }
 }
