--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
@@ -53,6 +54,7 @@
     "@types/chroma-js": "^2.1.0",
     "@types/material-ui": "^0.21.8",
     "@types/react-color": "^3.0.4",
-    "@types/react-copy-to-clipboard": "^4.3.0"
+    "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-material-ui-form-validator": "^2.1.0"
   }
 }
