--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "chroma-js": "^2.1.0",
+    "emoji-mart": "^3.0.0",
     "rc-slider": "^9.6.1",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.0",
+    "@types/emoji-mart": "^3.0.4",
     "@types/material-ui": "^0.21.8",
     "@types/react-color": "^3.0.4",
     "@types/react-copy-to-clipboard": "^4.3.0",
