--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "chroma-js": "^2.1.0",
-    "emoji-mart": "^3.0.0",
     "rc-slider": "^9.6.1",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
@@ -28,6 +27,7 @@
     "react-scripts": "4.0.0",
     "react-sortable-hoc": "^1.11.0",
     "react-transition-group": "^4.4.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
