--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "colour-palette",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://faultyagatha.github.io/flatuicolors-clone",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -33,6 +34,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -62,6 +65,7 @@
     "@types/material-ui": "^0.21.8",
     "@types/react-color": "^3.0.4",
     "@types/react-copy-to-clipboard": "^4.3.0",
-    "@types/react-material-ui-form-validator": "^2.1.0"
+    "@types/react-material-ui-form-validator": "^2.1.0",
+    "gh-pages": "^3.1.0"
   }
 }
